--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 </head>
 
 <body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2461960821563609"
+     crossorigin="anonymous"></script>
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
