feat: Implement SEO improvements by adding `react-helmet-async`, `robots.txt`, and updating meta tags in `index.html`.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' fill='%23FACC15' rx='64'/%3E%3Cpath d='M106 110 C106 110 256 40 406 110 V220 C406 350 256 460 256 460 C256 460 106 350 106 220 Z' fill='none' stroke='black' stroke-width='40' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M310 130 L180 280 H280 L240 430 L370 240 H270 L310 130 Z' fill='black'/%3E%3C/svg%3E" />
 
   <title>Instalação Segura</title>
+  <meta name="description"
+    content="Calculadora elétrica, dimensionamento de cabos e disjuntores conforme NBR 5410. Ferramentas gratuitas para eletricistas e projetos elétricos seguros." />
+  <meta name="keywords"
+    content="calculadora elétrica, dimensionamento disjuntor, cabos elétricos, NBR 5410, projeto elétrico, eletricista, instalação segura" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Instalação Segura - Calculadora Elétrica e Projetos" />
+  <meta property="og:description"
+    content="Calculadora elétrica, dimensionamento de cabos e disjuntores conforme NBR 5410. Ferramentas gratuitas para eletricistas e projetos elétricos seguros." />
+  <meta property="og:site_name" content="Instalação Segura" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Instalação Segura - Calculadora Elétrica e Projetos" />
+  <meta name="twitter:description"
+    content="Calculadora elétrica, dimensionamento de cabos e disjuntores conforme NBR 5410. Ferramentas gratuitas para eletricistas e projetos elétricos seguros." />
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Orbitron:wght@600&display=swap"
     rel="stylesheet">
@@ -114,7 +131,7 @@
 
 <body>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2461960821563609"
-     crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
